<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:padding="8dp">
    <ProgressBar
        android:id="@+id/loadingBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editSearchContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loadingBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/searchBtn"
        android:layout_margin="8dp"
        android:hint="@string/search_edit_text_hint">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/searchBtn"
        android:text="@string/search_button_text"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/loadingBar"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <ImageView
        android:id="@+id/userAvatar"
        app:layout_constraintTop_toBottomOf="@+id/editSearchContainer"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="128dp"
        android:maxHeight="128dp"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"/>
    <TextView
        android:id="@+id/userName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        tools:text="The Octocat"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
    <FrameLayout
        android:id="@+id/listContainer"
        app:layout_constraintTop_toBottomOf="@+id/userName"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>