<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragment.error.ErrorFragment">

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/error_message_tittle"
        android:id="@+id/errorTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textStyle="bold"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/errorMessage"
        app:layout_constraintTop_toBottomOf="@+id/errorTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="Could not Load Github User Data"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</androidx.constraintlayout.widget.ConstraintLayout>