<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/updateCaption"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:text="@string/last_updated_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/repoLastUpdated"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/updateCaption"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        tools:text="Jul 6, 2017 12:15:11 AM"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/starCaption"
        app:layout_constraintTop_toBottomOf="@+id/updateCaption"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:text="@string/stars_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/repoStars"
        app:layout_constraintTop_toBottomOf="@+id/updateCaption"
        app:layout_constraintLeft_toRightOf="@+id/updateCaption"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        tools:text="4"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/forkCaption"
        app:layout_constraintTop_toBottomOf="@+id/starCaption"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="0dp"
        android:text="@string/forks_caption"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/repoForks"
        app:layout_constraintTop_toBottomOf="@+id/starCaption"
        app:layout_constraintLeft_toRightOf="@+id/updateCaption"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="0dp"
        tools:text="24"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="textEnd"
        android:layout_height="wrap_content"
        android:padding="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>